--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,28 @@ body {
     margin-right: 200px;
 }
 
+.topnav {
+    overflow: hidden;
+    background-color:#333;
+    
+}
+
+.topnav a {
+    float: none;
+    display:block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+    
+}
+
+
 
 
